<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/viewDataKabupatenKota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@color/seperatorDataSapi"
        android:enabled="false"
        android:text="@string/data_kabupaten_kota" >
    </Button>

    <LinearLayout
        android:id="@+id/linAddKabupaten"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewDataKabupatenKota"
        android:layout_marginLeft="10dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvNamaKabupatenKota"
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/nama_kabupaten_kota" />

        <EditText
            android:id="@+id/edtNamaKabupatenKota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nama_kabupaten_kota"
            android:inputType="text"
            android:singleLine="true" />

        <TextView
            android:id="@+id/tvNamaProvinsi"
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/nama_provinsi" />

        <Spinner
            android:id="@+id/spinNamaProvinsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:popupBackground="@color/spinnerBackGround" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonSimpanKabupatenkota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/simpan_data" />

        <Button
            android:id="@+id/buttonBatalKabupatenKota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/batal" />
    </LinearLayout>

</RelativeLayout>