<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/txtWelcomeHome"
        style="@style/TextHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="50dp"
        android:text="@string/welcome" />

    <EditText
        android:id="@+id/edtSearchSapiBetina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtWelcomeHome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:hint="@string/insertEarTag"
        android:textSize="18dp" />

    <Button
        android:id="@+id/buttonCariHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtSearchSapiBetina"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/cari"
        android:textSize="18dp" />

</RelativeLayout>