<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/viewDataKejadianIb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@color/seperatorDataSapi"
        android:enabled="false"
        android:text="@string/kejadianIB" >
    </Button>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        android:layout_below="@+id/viewDataKejadianIb"
        android:layout_above="@+id/linearKejadianIB">

        <LinearLayout
            android:id="@+id/lin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvKodeStrawKejadianIb"
                style="@style/Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:text="@string/kode_straw" />

            <EditText
                android:id="@+id/edtKodeStrawKejadianIb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/kode_straw"
                android:inputType="phone"
                android:singleLine="true" />

            <TextView
                android:id="@+id/tvTanggalKejadianIb"
                style="@style/Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:text="@string/tanggal_ib" />

            <EditText
                android:id="@+id/edtTanggalKejadianIb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="YYYY-MM-DD" 
                android:inputType="phone"
                android:singleLine="true" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearKejadianIB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonSimpanKejadianIB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/simpan_data" />

        <Button
            android:id="@+id/buttonBatalKejadianIB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/batal" />
    </LinearLayout>

</RelativeLayout>